Mitarbeiter, Kreis und Rechteck - Java- und Klassendiagramm