@@ -12,43 +12,39 @@ package ls03.a;
 public class Mitarbeiter {
     private int id;
     private String name;
-    private final String regex = "^[a-zA-Z]*$";
 
-    public static void main(String[] vargs) {
-        final Mitarbeiter mitarbeiter = new Mitarbeiter();
-
-        mitarbeiter.setId(10);
-        mitarbeiter.setName("Hola");
-        System.out.println("Id \t" + "| \t" + "Name");
-        System.out.println(mitarbeiter.getId() + "\t" + "|" + "\t" + mitarbeiter.getName());
-    }
-
+    // Setter fuer ID mit Fehlerabfang
     public void setId(int id) {
         if (id < 0) {
-            this.id = -id;
-        } else {
-            this.id = id;
+            throw new IllegalArgumentException("Die ID darf nicht negativ sein.");
         }
+        this.id = id;
     }
 
+    // Getter fuer ID
     public int getId() {
-        return this.id;
+        return id;
     }
 
+    // Setter fuer Name mit Fehlerabfang
     public void setName(String name) {
-        if (name.matches(regex) && !name.isEmpty() && name != null && !name.isBlank()) {
-            this.name = name;
-        } else {
-            System.out.println("Entered String" + name + "for name was not valid!");
+        if (name == null || name.trim().isEmpty()) {
+            throw new IllegalArgumentException("Der Name darf nicht leer sein.");
         }
+        this.name = name;
     }
 
+    // Getter fuer Name
     public String getName() {
-        return this.name;
+        return name;
     }
 
+    // toString-Methode
     @Override
     public String toString() {
-        return super.toString();
+        return "Mitarbeiter{" +
+                "id=" + id +
+                ", name='" + name + '\'' +
+                '}';
     }
 }
